feat(musicApi): add new controler to refresh database
will clean and generate the db from scratch again
